# hermes-companion-daemon

./: .gitignore  AGENTS.md  API.md  CONTEXT.md  Dockerfile  GATE_REPORT.md  README.md  __init__.py  companion_cli.py  config.py  config_schema.py  conftest.py  email_2fa.py  first_run.py  install.sh  pyproject.toml  server.py  setup.py  setup_wizard.py  test_config.py  test_consolidation.py  test_integration.py  test_server.py
advisor-plans/: 001-bring-daemon-up.md  002-fix-qr-token-android.md  003-fail-closed-encrypted-prefs.md  004-reenable-skipped-tests.md  005-fix-package-metadata.md  006-synchronize-setup-tokens.md  007-sanitize-subprocess-errors.md  008-stop-printing-password.md  009-fix-time-mixing.md  010-stream-attachments.md  010-unify-auth-path.md  011-android-release-signing.md  011-e2e-auth-audit.md  012-rate-limit-redeem.md  README.md
advisor-plans/board-setup/: comment-and-watchdog.py  create-cards.py  create-gate.py  watchdog.py
deploy/: hermes-companion.service
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
hermes_companion_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plans/: 001-daemon-consolidate.md  002-auth-hardening.md  003-qr-setup-token.md  004-android-encrypted-prefs.md  005-network-security-config.md  006-attachment-streaming.md  007-config-validation.md  008-android-test-rewrite.md  009-security-headers.md  012-fix-api-key-mismatch.md  013-e2e-auth-test.md  014-scrypt-n-consistency.md  015-add-missing-kanban-crud-endpoints.md  016-add-task-lifecycle-endpoints.md  017-email-2fa-backend.md  018-attachment-chat-integration.md  019-sse-streaming-chat.md  020-daemon-systemd-deployment.md  026-add-2fa-check-endpoint.md  028-fix-2fa-fallback-prism4j-test.md  README.md
scripts/: create_companion_audit_cards.py
src/hermes_companion/: __init__.py  cli.py  server.py  setup_wizard.py
src/hermes_companion/systemd/: hermes-companion.service
src/hermes_companion_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_2fa.py  test_attachment_chat.py  test_attachment_streaming.py  test_auth_hardening.py  test_chat_stream.py  test_config_validation.py  test_e2e_auth.py  test_first_run.py  test_kanban_crud.py  test_kanban_lifecycle.py  test_security_headers.py  test_setup.py  test_setup_token.py  test_setup_wizard.py
